changed config.toml file

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -55,7 +55,7 @@ showErrorDetails = true
 # "viewer" : Hide the developer options.
 # "minimal" : Show only options set externally (e.g. through Streamlit Community Cloud) or through st.set_page_config. If there are no options left, hide the menu.
 # Default: "auto"
-toolbarMode = "auto"
+# toolbarMode = "auto"
 
 
 [runner]
