--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,11 +1,16 @@
-# Streamlit version: 1.23.0
+# Streamlit version: 1.29.0
 
 [global]
 
+# ***DEPRECATED***
+# global.disableWatchdogWarning has been deprecated has been deprecated and
+# will be removed in a future version. This option will be removed on or after
+# 2024-01-20.
+# --------------------
 # By default, Streamlit checks if the Python watchdog module is available and, if not, prints a warning asking for you to install it. The watchdog module is not required, but highly recommended. It improves Streamlit's ability to detect changes to files in your filesystem.
 # If you'd like to turn off this warning, set this to True.
 # Default: false
-disableWatchdogWarning = false
+# disableWatchdogWarning = false
 
 # By default, Streamlit displays a warning when a user sets both a widget default value in the function defining the widget and a widget value via the widget's key in `st.session_state`.
 # If you'd like to turn off this warning, set this to True.
@@ -15,11 +20,6 @@ disableWidgetStateDuplicationWarning = false
 # If True, will show a warning when you run a Streamlit-enabled script via "python my_script.py".
 # Default: true
 showWarningOnDirectExecution = true
-
-# DataFrame serialization.
-# Acceptable values: - 'legacy': Serialize DataFrames using Streamlit's custom format. Slow but battle-tested. - 'arrow': Serialize DataFrames using Apache Arrow. Much faster and versatile.
-# Default: "arrow"
-dataFrameSerialization = "arrow"
 
 
 [logger]
@@ -37,11 +37,13 @@ messageFormat = "%(asctime)s %(message)s"
 
 # Whether to enable st.cache.
 # Default: true
-caching = true
+# DEPRECATED
+# caching = true
 
 # If false, makes your Streamlit script not draw to a Streamlit app.
 # Default: true
-displayEnabled = true
+# DEPRECATED
+# displayEnabled = true
 
 # Controls whether uncaught app exceptions are displayed in the browser. By default, this is set to True and Streamlit displays app exceptions and associated tracebacks in the browser.
 # If set to False, an exception will result in a generic message being shown in the browser, and exceptions and tracebacks will be printed to the console only.
@@ -66,11 +68,13 @@ magicEnabled = true
 
 # Install a Python tracer to allow you to stop or pause your script at any point and introspect it. As a side-effect, this slows down your script's execution.
 # Default: false
-installTracer = false
+# DEPRECATED
+# installTracer = false
 
 # Sets the MPLBACKEND environment variable to Agg inside Streamlit to prevent Python crashing.
 # Default: true
-fixMatplotlib = true
+# DEPRECATED
+# fixMatplotlib = true
 
 # Run the Python Garbage Collector after each script execution. This can help avoid excess memory use in Streamlit apps, but could introduce delay in rerunning the app script for high-memory-use applications.
 # Default: true
@@ -183,7 +187,8 @@ token = ""
 
 # Set to false to disable the deprecation warning for the file uploader encoding.
 # Default: true
-showfileUploaderEncoding = true
+# DEPRECATED
+# showfileUploaderEncoding = true
 
 # Set to false to disable the deprecation warning for using the global pyplot instance.
 # Default: true
