--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install poetry==1.7.1
-          poetry config settings.virtualenvs.in-project true
+          poetry config virtualenvs.in-project true
           poetry install
       - name: Run black
         run:
